--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -15,6 +15,8 @@ target_sources(${utest_ex_name} PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestAMSNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestTKERodiNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestSSTNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestKENodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestKONodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestKsgsNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestWallDistNode.C
 )
