--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -18,6 +18,8 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/MetricTensorElemAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscKsgsAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscSSTAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscKEAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscKOAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/WallFuncGeometryAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/ABLWallFrictionVelAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/ABLWallFluxesAlg.C
