--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -14,13 +14,17 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarGclNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarMassBDFNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTAMSNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TDRKENodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTAMSNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKERodiNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKEKsgsNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TKEKENodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TKEKONodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTDESNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTIDDESNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/SDRKONodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTDESNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/WallDistNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/BLTGammaM2015NodeKernel.C
