--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -19,11 +19,13 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/TKERodiNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKEKsgsNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTLRNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKEKENodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKEKONodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTDESNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTIDDESNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTLRNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRKONodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTDESNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/WallDistNodeKernel.C
