--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Check formatting
       uses: DoozyX/clang-format-lint-action@v0.13
       with:
-        source: './include ./src ./unit_tests'
-        exclude: '.'
+        source: '. ./include ./src ./unit_tests'
+        exclude: './docs'
         extensions: 'H,h,cpp,C'
         clangFormatVersion: 13
   CPU:
