--- a/reg_tests/test_files/nrel5MWactuatorLine/5MW_Baseline/ServoData/CMakeLists.txt
+++ b/reg_tests/test_files/nrel5MWactuatorLine/5MW_Baseline/ServoData/CMakeLists.txt
@@ -1,3 +1,4 @@
+enable_language(Fortran)
 # Need to set -w (no warnings) for GCC < 7 so it doesn't fail when trying to output
 # warnings. This problem was fixed in GCC 7.
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
