FSI: Add WM params and testing

--- a/unit_tests/utils/CMakeLists.txt
+++ b/unit_tests/utils/CMakeLists.txt
@@ -1,3 +1,4 @@
 target_sources(${utest_ex_name} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestComputeVectorDivergence.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestWienerMilenkovic.C
 )
