--- a/reg_tests/test_files/ablNeutralEdgeNoSlip/ablNeutralEdgeNoSlip.yaml
+++ b/reg_tests/test_files/ablNeutralEdgeNoSlip/ablNeutralEdgeNoSlip.yaml
@@ -348,6 +348,26 @@ realms:
               beam_length: 12500 # in m, maximum possible length of beam from the center
               elevation_angles: [0,1,2,3] # elevation angles to scan after reset
 
+          - name: radar/radar-beam-filter
+            type: radar
+            frequency: 4
+            points_along_line: 5
+            always_output: yes
+            output: text
+            radar_cone_filter:
+              cone_angle: 0.25 #half angle of cone, in degrees
+              quadrature_type: radau # type of quadrature. `radau` or `trunc_normal{1,2,3}`
+              radau_points: 9 # number of points for radau -> 8 circles
+              lines_per_cone_circle: 6 # number of lines around the cone circle
+            radar_specifications:
+              bbox: [0., 0., 0., 5000., 5000., 1000.] # where to cut the radar line(m)
+              center: [-10000, 2500, 100] #ideally outside of the box
+              angular_speed: 1 #degrees to sweep in a second
+              axis: [1, 0, 0] #main axis, cone grid is set around this
+              sweep_angle: 10 #angle of the sweep
+              reset_time:  0 # time to pause after a sweep
+              beam_length: 12500 # in m, maximum possible length of beam from the center
+              elevation_angles: [0,1,2,3] # elevation angles to scan after reset
 
     # This defines the ABL forcing to drive the winds to 8 m/s from
     # 245 degrees (southwest) at 90 m above the surface in a planar
