--- a/src/mesh_motion/CMakeLists.txt
+++ b/src/mesh_motion/CMakeLists.txt
@@ -2,7 +2,6 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/FrameBase.C
    ${CMAKE_CURRENT_SOURCE_DIR}/FrameMoving.C
    ${CMAKE_CURRENT_SOURCE_DIR}/FrameReference.C
-   ${CMAKE_CURRENT_SOURCE_DIR}/FrameOpenFAST.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MeshMotionAlg.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MeshTransformationAlg.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionDeformingInteriorKernel.C
@@ -11,3 +10,9 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionTranslationKernel.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionWavesKernel.C
 )
+
+if(ENABLE_OPENFAST)
+   target_sources(nalu PRIVATE
+     ${CMAKE_CURRENT_SOURCE_DIR}/FrameOpenFAST.C
+   )
+endif(ENABLE_OPENFAST)
