--- a/src/mesh_motion/CMakeLists.txt
+++ b/src/mesh_motion/CMakeLists.txt
@@ -11,7 +11,7 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionWavesKernel.C
 )
 
-if(ENABLE_OPENFAST)
+if(ENABLE_OPENFAST_FSI)
    target_sources(nalu PRIVATE
      ${CMAKE_CURRENT_SOURCE_DIR}/FrameOpenFAST.C
    )
