WIP: Merging OpenfastFSI into the AeroContainer

--- a/src/mesh_motion/CMakeLists.txt
+++ b/src/mesh_motion/CMakeLists.txt
@@ -15,4 +15,4 @@ if(ENABLE_OPENFAST_FSI)
    target_sources(nalu PRIVATE
      ${CMAKE_CURRENT_SOURCE_DIR}/FrameOpenFAST.C
    )
-endif(ENABLE_OPENFAST)
+endif()
