--- a/reg_tests/test_files/ablNeutralNGPHypre/ablNeutralNGPHypre.yaml
+++ b/reg_tests/test_files/ablNeutralNGPHypre/ablNeutralNGPHypre.yaml
@@ -14,66 +14,14 @@ hypre_config:
 linear_solvers:
 
   - name: solve_mom
-    type: hypre
-    method: hypre_gmres
-    preconditioner: boomerAMG
-    tolerance: 1e-12
-    max_iterations: 200
-    kspace: 75
-    output_level: 0
-    segregated_solver: no
-    write_matrix_files: no
-    reuse_linear_system: yes
-    recompute_preconditioner_frequency: 100
-    simple_hypre_matrix_assemble: no
-    dump_hypre_matrix_stats: no
-    write_preassembly_matrix_files: no
-
-    # File containing hypre specific configuration options
-    hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
-    # YAML node used for this linear solver
-    hypre_cfg_node: hypre_simple_precon
-
+    solver_preset: momentum_hypre
+    
   - name: solve_scalar
-    type: hypre
-    method: hypre_gmres
-    preconditioner: boomerAMG
-    tolerance: 1e-12
-    max_iterations: 200
-    kspace: 75
-    output_level: 0
-    write_matrix_files: no
-    reuse_linear_system: yes
-    recompute_preconditioner_frequency: 100
-    simple_hypre_matrix_assemble: no
-    dump_hypre_matrix_stats: no
-    write_preassembly_matrix_files: no
-
-    # File containing hypre specific configuration options
-    hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
-    # YAML node used for this linear solver
-    hypre_cfg_node: hypre_simple_precon
-
+    solver_preset: scalar_hypre
+    
   - name: solve_elliptic
-    type: hypre
-    method: hypre_gmres
-    preconditioner: boomerAMG
-    tolerance: 1e-12
-    max_iterations: 200
-    kspace: 75
-    output_level: 0
-    write_matrix_files: no
-    reuse_linear_system: yes
-    recompute_preconditioner_frequency: 100
-    simple_hypre_matrix_assemble: no
-    dump_hypre_matrix_stats: no
-    write_preassembly_matrix_files: no
-
-    # File containing hypre specific configuration options
-    hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
-    # YAML node used for this linear solver
-    hypre_cfg_node: hypre_elliptic
-
+    solver_preset: elliptic_hypre
+    
 realms:
 
   - name: fluidRealm
