--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -99,6 +99,7 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/TurbulenceAveragingPostProcessing.C
    ${CMAKE_CURRENT_SOURCE_DIR}/WallDistEquationSystem.C
    ${CMAKE_CURRENT_SOURCE_DIR}/WilcoxKOmegaEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/VolumeOfFluidEquationSystem.C
 )
 
 if(ENABLE_FFTW)
