--- a/unit_tests/mesh_motion/CMakeLists.txt
+++ b/unit_tests/mesh_motion/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(${utest_ex_name} PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestCylinder.C
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestCompositeFrames.C
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestComputeCentroid.C
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestMotionTypes.C
