--- a/src/user_functions/CMakeLists.txt
+++ b/src/user_functions/CMakeLists.txt
@@ -37,4 +37,5 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/WindEnergyTaylorVortexPressureAuxFunction.C
    ${CMAKE_CURRENT_SOURCE_DIR}/ZalesakDiskVOFAuxFunction.C
    ${CMAKE_CURRENT_SOURCE_DIR}/ZalesakDiskMassFlowRateKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/DropletVOFAuxFunction.C
 )
