Make trilinos solver support optional
Uses cmake variable ENABLE_TRILINOS_SOLVERS
and nalu-wind macro NALU_USES_TRILINOS_SOLVERS

These both mirror corresponding names that are used
to enable/disable HYPRE.

There is an interaction with ENABLE_MATRIXFREE:
Matrix-free can only be enabled if trilinos-solvers are enabled.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,104 +1,102 @@
 target_sources(
   nalu
   PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/ABLProfileFunction.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AlgorithmDriver.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AMSAlgDriver.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleContinuityNonConformalSolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleElemSolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleFaceElemSolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleEdgeSolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMomentumEdgeWallFunctionSolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMomentumNonConformalSolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradNonConformalAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradUNonConformalAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodeSolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNGPNodeSolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssemblePNGBoundarySolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssemblePNGElemSolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssemblePNGNonConformalSolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleScalarEigenEdgeSolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleScalarNonConformalSolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleWallDistNonConformalAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleWallHeatTransferAlgorithmDriver.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AuxFunctionAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/AveragingInfo.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/BoundaryConditions.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/ChienKEpsilonEquationSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/ComputeHeatTransferEdgeWallAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/ComputeMdotNonConformalAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/ComputeSSTMaxLengthScaleElemAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/ComputeWallFrictionVelocityAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/ConstantAuxFunction.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityLowSpeedCompressibleNodeSuppAlg.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/CopyFieldAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/CoriolisSrc.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/DataProbePostProcessing.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/DgInfo.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/DirichletBC.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/EffectiveDiffFluxCoeffAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/ElemDataRequests.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/ElemDataRequestsGPU.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyEquationSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyLowSpeedCompressibleNodeSuppAlg.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyPmrSrcNodeSuppAlg.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyPressureWorkNodeSuppAlg.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyViscousWorkNodeSuppAlg.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/EquationSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/EquationSystems.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/FieldFunctions.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/FieldManager.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/FieldRegistry.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/FixPressureAtNodeAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/GammaEquationSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/InitialConditions.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/InputOutputRealm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/LinearSolver.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/LinearSolverConfig.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/LinearSolvers.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/LinearSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/LowMachEquationSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/MaterialProperty.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/MaterialPropertys.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/MomentumBoussinesqRASrcNodeSuppAlg.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/MomentumBuoyancySrcNodeSuppAlg.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/MovingAveragePostProcessor.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/NaluEnv.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/NaluParsing.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/NonConformalInfo.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/NonConformalManager.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/OutputInfo.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/PecletFunction.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/PeriodicManager.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/PostProcessingInfo.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/ProjectedNodalGradientEquationSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/Realm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/Realms.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/ScratchViews.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/ShearStressTransportEquationSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/SideWriter.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/Simulation.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/SolutionNormPostProcessing.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/SolutionOptions.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/SolverAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/SolverAlgorithmDriver.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/SpecificDissipationRateEquationSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/SupplementalAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/SurfaceForceAndMomentAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/SurfaceForceAndMomentAlgorithmDriver.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/SurfaceForceAndMomentWallFunctionAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/TimeIntegrator.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/TotalDissipationRateEquationSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/TpetraLinearSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/TpetraLinearSystemHelpers.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/TpetraSegregatedLinearSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/TurbKineticEnergyEquationSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscSmagorinskyAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscWaleAlgorithm.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/TurbulenceAveragingPostProcessing.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/WallDistEquationSystem.C
-    ${CMAKE_CURRENT_SOURCE_DIR}/WilcoxKOmegaEquationSystem.C)
+   ${CMAKE_CURRENT_SOURCE_DIR}/ABLProfileFunction.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AlgorithmDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AMSAlgDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleContinuityNonConformalSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleElemSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleFaceElemSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleEdgeSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMomentumEdgeWallFunctionSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMomentumNonConformalSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradNonConformalAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradUNonConformalAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodeSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNGPNodeSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssemblePNGBoundarySolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssemblePNGElemSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssemblePNGNonConformalSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleScalarEigenEdgeSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleScalarNonConformalSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleWallDistNonConformalAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleWallHeatTransferAlgorithmDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AuxFunctionAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AveragingInfo.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/BoundaryConditions.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ChienKEpsilonEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeHeatTransferEdgeWallAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeMdotNonConformalAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeSSTMaxLengthScaleElemAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeWallFrictionVelocityAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ConstantAuxFunction.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityLowSpeedCompressibleNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/CopyFieldAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/CoriolisSrc.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/DataProbePostProcessing.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/DgInfo.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/DirichletBC.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EffectiveDiffFluxCoeffAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ElemDataRequests.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ElemDataRequestsGPU.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyLowSpeedCompressibleNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyPmrSrcNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyPressureWorkNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyViscousWorkNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EquationSystems.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/FieldFunctions.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/FieldManager.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/FieldRegistry.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/FixPressureAtNodeAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/GammaEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/InitialConditions.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/InputOutputRealm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/LinearSolver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/LinearSolverConfig.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/LinearSolvers.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/LinearSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/LowMachEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MaterialProperty.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MaterialPropertys.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumBoussinesqRASrcNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumBuoyancySrcNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MovingAveragePostProcessor.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/NaluEnv.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/NaluParsing.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/NonConformalInfo.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/NonConformalManager.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/OutputInfo.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/PecletFunction.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/PeriodicManager.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/PostProcessingInfo.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ProjectedNodalGradientEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Realm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Realms.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScratchViews.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ShearStressTransportEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SideWriter.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Simulation.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SolutionNormPostProcessing.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SolutionOptions.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SolverAlgorithmDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SpecificDissipationRateEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SupplementalAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SurfaceForceAndMomentAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SurfaceForceAndMomentAlgorithmDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SurfaceForceAndMomentWallFunctionAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TimeIntegrator.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TotalDissipationRateEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TurbKineticEnergyEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscSmagorinskyAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscWaleAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TurbulenceAveragingPostProcessing.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/WallDistEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/WilcoxKOmegaEquationSystem.C
+)
 
 if(ENABLE_FFTW)
   target_sources(
@@ -121,6 +119,14 @@ if(ENABLE_MATRIXFREE)
                  ${CMAKE_CURRENT_SOURCE_DIR}/MatrixFreeLowMachEquationSystem.C)
   add_subdirectory(matrix_free)
 endif(ENABLE_MATRIXFREE)
+
+if(ENABLE_TRILINOS_SOLVERS)
+   target_sources(nalu PRIVATE
+      ${CMAKE_CURRENT_SOURCE_DIR}/TpetraLinearSystem.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/TpetraLinearSystemHelpers.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/TpetraSegregatedLinearSystem.C
+   )
+endif()
 
 add_subdirectory(aero)
 add_subdirectory(kernel)
